--- a/assets/style.css
+++ b/assets/style.css
@@ -26,3 +26,36 @@ header{
     color: #999;
     font-size: .8em;
 }
+
+.badge-success{
+    background-color: #09D261;
+}
+
+#search{
+    background-color: #F8F8F8;
+    min-height: 50px;
+}
+
+#panel-left{
+    border-radius: 1px solid #DBDBDB;
+    color: #4D4D4D;
+}
+
+#panel-left small{
+    color: #9B9B9B;
+}
+
+.list-group-item{
+    border-left: none;
+    border-right: none;
+    border-color: #F8F8F8;
+}
+
+.list-group-item:first-child{
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+#foto{
+    border-radius: 50%;
+}
